updating multiple run issue

--- a/notebooks/Retail/demand_kafka_producer.ipynb
+++ b/notebooks/Retail/demand_kafka_producer.ipynb
@@ -382,84 +382,66 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "User record b'day 0 of 2010' successfully produced to DAILY_DEMAND [2] at offset 30\n",
-      "User record b'day 1 of 2010' successfully produced to DAILY_DEMAND [1] at offset 24\n",
-      "User record b'day 2 of 2010' successfully produced to DAILY_DEMAND [0] at offset 26\n",
-      "User record b'day 3 of 2010' successfully produced to DAILY_DEMAND [5] at offset 26\n",
-      "User record b'day 4 of 2010' successfully produced to DAILY_DEMAND [0] at offset 27\n",
-      "User record b'day 5 of 2010' successfully produced to DAILY_DEMAND [1] at offset 25\n",
-      "User record b'day 6 of 2010' successfully produced to DAILY_DEMAND [2] at offset 31\n",
-      "User record b'day 7 of 2010' successfully produced to DAILY_DEMAND [1] at offset 26\n",
-      "User record b'day 8 of 2010' successfully produced to DAILY_DEMAND [2] at offset 32\n",
-      "User record b'day 9 of 2010' successfully produced to DAILY_DEMAND [5] at offset 27\n",
-      "User record b'day 10 of 2010' successfully produced to DAILY_DEMAND [3] at offset 24\n",
-      "User record b'day 11 of 2010' successfully produced to DAILY_DEMAND [4] at offset 20\n",
-      "User record b'day 12 of 2010' successfully produced to DAILY_DEMAND [1] at offset 27\n",
-      "User record b'day 13 of 2010' successfully produced to DAILY_DEMAND [0] at offset 28\n",
-      "User record b'day 14 of 2010' successfully produced to DAILY_DEMAND [3] at offset 25\n",
-      "User record b'day 15 of 2010' successfully produced to DAILY_DEMAND [2] at offset 33\n",
-      "User record b'day 16 of 2010' successfully produced to DAILY_DEMAND [3] at offset 26\n",
-      "User record b'day 17 of 2010' successfully produced to DAILY_DEMAND [2] at offset 34\n",
-      "User record b'day 18 of 2010' successfully produced to DAILY_DEMAND [5] at offset 28\n",
-      "User record b'day 19 of 2010' successfully produced to DAILY_DEMAND [0] at offset 29\n",
-      "User record b'day 20 of 2010' successfully produced to DAILY_DEMAND [2] at offset 35\n",
-      "User record b'day 21 of 2010' successfully produced to DAILY_DEMAND [1] at offset 28\n",
-      "User record b'day 22 of 2010' successfully produced to DAILY_DEMAND [2] at offset 36\n",
-      "User record b'day 23 of 2010' successfully produced to DAILY_DEMAND [5] at offset 29\n",
-      "User record b'day 24 of 2010' successfully produced to DAILY_DEMAND [2] at offset 37\n",
-      "User record b'day 25 of 2010' successfully produced to DAILY_DEMAND [3] at offset 27\n",
-      "User record b'day 26 of 2010' successfully produced to DAILY_DEMAND [2] at offset 38\n",
-      "User record b'day 27 of 2010' successfully produced to DAILY_DEMAND [1] at offset 29\n",
-      "User record b'day 28 of 2010' successfully produced to DAILY_DEMAND [0] at offset 30\n",
-      "User record b'day 29 of 2010' successfully produced to DAILY_DEMAND [1] at offset 30\n",
-      "User record b'day 30 of 2010' successfully produced to DAILY_DEMAND [4] at offset 21\n",
-      "User record b'day 31 of 2010' successfully produced to DAILY_DEMAND [3] at offset 28\n",
-      "User record b'day 32 of 2010' successfully produced to DAILY_DEMAND [4] at offset 22\n",
-      "User record b'day 33 of 2010' successfully produced to DAILY_DEMAND [5] at offset 30\n",
-      "User record b'day 34 of 2010' successfully produced to DAILY_DEMAND [0] at offset 31\n",
-      "User record b'day 35 of 2010' successfully produced to DAILY_DEMAND [1] at offset 31\n",
-      "User record b'day 36 of 2010' successfully produced to DAILY_DEMAND [2] at offset 39\n",
-      "User record b'day 37 of 2010' successfully produced to DAILY_DEMAND [3] at offset 29\n",
-      "User record b'day 38 of 2010' successfully produced to DAILY_DEMAND [2] at offset 40\n",
-      "User record b'day 39 of 2010' successfully produced to DAILY_DEMAND [5] at offset 31\n",
-      "User record b'day 40 of 2010' successfully produced to DAILY_DEMAND [3] at offset 30\n",
-      "User record b'day 41 of 2010' successfully produced to DAILY_DEMAND [2] at offset 41\n",
-      "User record b'day 42 of 2010' successfully produced to DAILY_DEMAND [5] at offset 32\n",
-      "User record b'day 43 of 2010' successfully produced to DAILY_DEMAND [4] at offset 23\n",
-      "User record b'day 44 of 2010' successfully produced to DAILY_DEMAND [3] at offset 31\n",
-      "User record b'day 45 of 2010' successfully produced to DAILY_DEMAND [4] at offset 24\n",
-      "User record b'day 46 of 2010' successfully produced to DAILY_DEMAND [3] at offset 32\n",
-      "User record b'day 47 of 2010' successfully produced to DAILY_DEMAND [0] at offset 32\n",
-      "User record b'day 48 of 2010' successfully produced to DAILY_DEMAND [1] at offset 32\n",
-      "User record b'day 49 of 2010' successfully produced to DAILY_DEMAND [0] at offset 33\n",
-      "User record b'day 50 of 2010' successfully produced to DAILY_DEMAND [1] at offset 33\n",
-      "User record b'day 51 of 2010' successfully produced to DAILY_DEMAND [0] at offset 34\n",
-      "User record b'day 52 of 2010' successfully produced to DAILY_DEMAND [5] at offset 33\n",
-      "User record b'day 53 of 2010' successfully produced to DAILY_DEMAND [0] at offset 35\n",
-      "User record b'day 54 of 2010' successfully produced to DAILY_DEMAND [5] at offset 34\n",
-      "User record b'day 55 of 2010' successfully produced to DAILY_DEMAND [4] at offset 25\n",
-      "User record b'day 56 of 2010' successfully produced to DAILY_DEMAND [5] at offset 35\n",
-      "User record b'day 57 of 2010' successfully produced to DAILY_DEMAND [2] at offset 42\n",
-      "User record b'day 58 of 2010' successfully produced to DAILY_DEMAND [3] at offset 33\n",
-      "User record b'day 59 of 2010' successfully produced to DAILY_DEMAND [0] at offset 36\n",
-      "User record b'day 60 of 2010' successfully produced to DAILY_DEMAND [2] at offset 43\n",
-      "User record b'day 61 of 2010' successfully produced to DAILY_DEMAND [1] at offset 34\n",
-      "User record b'day 62 of 2010' successfully produced to DAILY_DEMAND [2] at offset 44\n",
-      "User record b'day 63 of 2010' successfully produced to DAILY_DEMAND [5] at offset 36\n",
-      "User record b'day 64 of 2010' successfully produced to DAILY_DEMAND [4] at offset 26\n",
-      "User record b'day 65 of 2010' successfully produced to DAILY_DEMAND [3] at offset 34\n",
-      "User record b'day 66 of 2010' successfully produced to DAILY_DEMAND [4] at offset 27\n",
-      "User record b'day 67 of 2010' successfully produced to DAILY_DEMAND [5] at offset 37\n",
-      "User record b'day 68 of 2010' successfully produced to DAILY_DEMAND [4] at offset 28\n",
-      "User record b'day 69 of 2010' successfully produced to DAILY_DEMAND [1] at offset 35\n",
-      "User record b'day 70 of 2010' successfully produced to DAILY_DEMAND [0] at offset 37\n",
-      "User record b'day 71 of 2010' successfully produced to DAILY_DEMAND [5] at offset 38\n",
-      "User record b'day 72 of 2010' successfully produced to DAILY_DEMAND [4] at offset 29\n",
-      "User record b'day 73 of 2010' successfully produced to DAILY_DEMAND [3] at offset 35\n",
-      "User record b'day 74 of 2010' successfully produced to DAILY_DEMAND [0] at offset 38\n"
+      "%3|1699153689.033|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv4#127.0.0.1:19092 failed: Connection refused (after 12ms in state CONNECT)\n",
+      "%3|1699153690.026|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv6#[::1]:19092 failed: Connection refused (after 0ms in state CONNECT)\n",
+      "%3|1699153691.031|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv6#[::1]:19092 failed: Connection refused (after 1ms in state CONNECT, 1 identical error(s) suppressed)\n",
+      "%3|1699153692.034|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv4#127.0.0.1:19092 failed: Connection refused (after 2ms in state CONNECT)\n",
+      "%3|1699153693.037|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv6#[::1]:19092 failed: Connection refused (after 1ms in state CONNECT)\n",
+      "%3|1699153694.041|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv4#127.0.0.1:19092 failed: Connection refused (after 1ms in state CONNECT)\n",
+      "%3|1699153697.049|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv6#[::1]:19092 failed: Connection refused (after 1ms in state CONNECT)\n",
+      "%3|1699153698.053|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv4#127.0.0.1:19092 failed: Connection refused (after 1ms in state CONNECT)\n",
+      "%3|1699153700.059|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv6#[::1]:19092 failed: Connection refused (after 0ms in state CONNECT)\n",
+      "%3|1699153701.060|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv4#127.0.0.1:19092 failed: Connection refused (after 1ms in state CONNECT)\n",
+      "%3|1699153702.060|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv6#[::1]:19092 failed: Connection refused (after 0ms in state CONNECT)\n",
+      "%3|1699153703.062|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv4#127.0.0.1:19092 failed: Connection refused (after 1ms in state CONNECT)\n",
+      "%3|1699153704.061|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv6#[::1]:19092 failed: Connection refused (after 0ms in state CONNECT)\n",
+      "%3|1699153707.071|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv4#127.0.0.1:19092 failed: Connection refused (after 1ms in state CONNECT)\n",
+      "%3|1699153708.072|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv6#[::1]:19092 failed: Connection refused (after 1ms in state CONNECT)\n",
+      "%3|1699153709.075|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv4#127.0.0.1:19092 failed: Connection refused (after 1ms in state CONNECT)\n",
+      "%3|1699153710.077|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv6#[::1]:19092 failed: Connection refused (after 3ms in state CONNECT)\n",
+      "%3|1699153711.075|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv4#127.0.0.1:19092 failed: Connection refused (after 0ms in state CONNECT)\n",
+      "%3|1699153712.078|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv6#[::1]:19092 failed: Connection refused (after 1ms in state CONNECT)\n",
+      "%3|1699153713.077|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv4#127.0.0.1:19092 failed: Connection refused (after 0ms in state CONNECT)\n",
+      "%3|1699153714.080|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv6#[::1]:19092 failed: Connection refused (after 1ms in state CONNECT)\n",
+      "%3|1699153717.088|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv4#127.0.0.1:19092 failed: Connection refused (after 0ms in state CONNECT)\n",
+      "%3|1699153718.094|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv6#[::1]:19092 failed: Connection refused (after 2ms in state CONNECT)\n",
+      "%3|1699153719.097|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv4#127.0.0.1:19092 failed: Connection refused (after 1ms in state CONNECT)\n",
+      "%3|1699153720.098|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv6#[::1]:19092 failed: Connection refused (after 0ms in state CONNECT)\n",
+      "%3|1699153721.104|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv6#[::1]:19092 failed: Connection refused (after 2ms in state CONNECT, 1 identical error(s) suppressed)\n",
+      "%3|1699153722.103|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv4#127.0.0.1:19092 failed: Connection refused (after 0ms in state CONNECT)\n",
+      "%3|1699153725.113|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv6#[::1]:19092 failed: Connection refused (after 2ms in state CONNECT)\n",
+      "%3|1699153726.111|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv4#127.0.0.1:19092 failed: Connection refused (after 0ms in state CONNECT)\n",
+      "%3|1699153727.117|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv6#[::1]:19092 failed: Connection refused (after 2ms in state CONNECT)\n",
+      "%3|1699153729.119|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv4#127.0.0.1:19092 failed: Connection refused (after 0ms in state CONNECT)\n",
+      "%3|1699153730.120|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv6#[::1]:19092 failed: Connection refused (after 1ms in state CONNECT)\n",
+      "%3|1699153734.129|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv4#127.0.0.1:19092 failed: Connection refused (after 0ms in state CONNECT)\n",
+      "%3|1699153735.134|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv6#[::1]:19092 failed: Connection refused (after 1ms in state CONNECT)\n",
+      "%3|1699153736.136|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv4#127.0.0.1:19092 failed: Connection refused (after 1ms in state CONNECT)\n",
+      "%3|1699153737.136|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv6#[::1]:19092 failed: Connection refused (after 0ms in state CONNECT)\n",
+      "%3|1699153745.162|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv4#127.0.0.1:19092 failed: Connection refused (after 1ms in state CONNECT)\n",
+      "%3|1699153748.172|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv6#[::1]:19092 failed: Connection refused (after 1ms in state CONNECT)\n",
+      "%3|1699153749.176|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv4#127.0.0.1:19092 failed: Connection refused (after 1ms in state CONNECT)\n",
+      "%3|1699153750.175|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv6#[::1]:19092 failed: Connection refused (after 0ms in state CONNECT)\n",
+      "%3|1699153751.178|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv6#[::1]:19092 failed: Connection refused (after 1ms in state CONNECT, 1 identical error(s) suppressed)\n",
+      "%3|1699153752.177|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv4#127.0.0.1:19092 failed: Connection refused (after 0ms in state CONNECT)\n",
+      "%3|1699153753.179|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv6#[::1]:19092 failed: Connection refused (after 1ms in state CONNECT)\n",
+      "%3|1699153755.182|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Connect to ipv4#127.0.0.1:19092 failed: Connection refused (after 0ms in state CONNECT)\n",
+      "%6|1699153758.190|FAIL|rdkafka#producer-1| [thrd:localhost:19092/bootstrap]: localhost:19092/bootstrap: Disconnected while requesting ApiVersion: might be caused by incorrect security.protocol configuration (connecting to a SSL listener?) or broker version is < 0.10 (see api.version.request) (after 0ms in state APIVERSION_QUERY)\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 11\u001b[0m\n\u001b[1;32m      5\u001b[0m day_of_year_key \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mday \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m of \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(index, the_year)\n\u001b[1;32m      6\u001b[0m producer\u001b[38;5;241m.\u001b[39mproduce(topic\u001b[38;5;241m=\u001b[39mtopic, key\u001b[38;5;241m=\u001b[39mday_of_year_key,\n\u001b[1;32m      7\u001b[0m                      value\u001b[38;5;241m=\u001b[39mjson_serializer(day_data, \n\u001b[1;32m      8\u001b[0m                      SerializationContext(topic, MessageField\u001b[38;5;241m.\u001b[39mVALUE)),\n\u001b[1;32m      9\u001b[0m                      on_delivery\u001b[38;5;241m=\u001b[39mdelivery_report)\n\u001b[0;32m---> 11\u001b[0m \u001b[43mproducer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mflush\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[7], line 1\u001b[0m, in \u001b[0;36mdelivery_report\u001b[0;34m(err, msg)\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdelivery_report\u001b[39m(err, msg):\n\u001b[1;32m      2\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;124;03m    Reports the success or failure of a message delivery.\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;124;03m        msg (Message): The message that was produced or failed.\u001b[39;00m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m err \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
