--- a/notebooks/Retail/kafka_admin_client_ITSM.ipynb
+++ b/notebooks/Retail/kafka_admin_client_ITSM.ipynb
@@ -40,6 +40,33 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "7ce45809-9de6-4a11-b9a3-f8f23e529a4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def example_delete_topics(a, topics):\n",
+    "    \"\"\" delete topics \"\"\"\n",
+    "\n",
+    "    # Call delete_topics to asynchronously delete topics, a future is returned.\n",
+    "    # By default this operation on the broker returns immediately while\n",
+    "    # topics are deleted in the background. But here we give it some time (30s)\n",
+    "    # to propagate in the cluster before returning.\n",
+    "    #\n",
+    "    # Returns a dict of <topic,future>.\n",
+    "    fs = a.delete_topics(topics, operation_timeout=30)\n",
+    "\n",
+    "    # Wait for operation to finish.\n",
+    "    for topic, f in fs.items():\n",
+    "        try:\n",
+    "            f.result()  # The result itself is None\n",
+    "            print(\"Topic {} deleted\".format(topic))\n",
+    "        except Exception as e:\n",
+    "            print(\"Failed to delete topic {}: {}\".format(topic, e))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "3bcd0ca6-f54d-48ad-9131-84bfcefc3dd3",
    "metadata": {},
    "outputs": [],
@@ -55,8 +82,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "eddee80e-e28b-47e3-8856-eb0af4e3d223",
+   "execution_count": null,
+   "id": "00d9907d-5507-4535-a2b2-6702cb07f840",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "7bdf9cdf-3e47-43fc-9ece-b27b825b1f27",
    "metadata": {},
    "outputs": [],
@@ -83,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "6aac2b07-7d5b-4b13-80fe-3e726b8181d8",
    "metadata": {},
    "outputs": [],
@@ -98,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "3280697c-dace-4c23-b01b-c096e0c91a32",
    "metadata": {},
    "outputs": [],
@@ -113,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "101eea11-c770-4ee8-b432-8fce9d1632f6",
    "metadata": {},
    "outputs": [
@@ -123,17 +150,21 @@
      "text": [
       "Topic _schemas is available\n",
       "Topic __consumer_offsets is available\n",
-      "Topic DAILY_DEMAND created\n",
-      "Topic, DAILY_DEMAND max.message.bytes is 1048588.\n",
-      "Now max.message.bytes for topic DAILY_DEMAND is 51200\n"
+      "Failed to create topic DAILY_DEMAND: KafkaError{code=TOPIC_ALREADY_EXISTS,val=36,str=\"Topic 'DAILY_DEMAND' is marked for deletion.\"}\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/fb/t_m5qpcj6qq85rvkh73vbxh40000gn/T/ipykernel_21671/471056771.py:5: DeprecationWarning: alter_configs has been deprecated. Use incremental_alter_configs instead.\n",
-      "  result_dict = admin.alter_configs([resource])\n"
+     "ename": "KafkaException",
+     "evalue": "KafkaError{code=UNKNOWN_TOPIC_OR_PART,val=3,str=\"Broker: Unknown topic or partition\"}",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKafkaException\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 11\u001b[0m\n\u001b[1;32m      8\u001b[0m     create_topic(admin, topic_name)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# Check max.message.bytes config and set if needed\u001b[39;00m\n\u001b[0;32m---> 11\u001b[0m current_max \u001b[38;5;241m=\u001b[39m \u001b[43mget_max_size\u001b[49m\u001b[43m(\u001b[49m\u001b[43madmin\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtopic_name\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m current_max \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mstr\u001b[39m(max_msg_k \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m1024\u001b[39m):\n\u001b[1;32m     13\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTopic, \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtopic_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m max.message.bytes is \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcurrent_max\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[8], line 4\u001b[0m, in \u001b[0;36mget_max_size\u001b[0;34m(admin, topic)\u001b[0m\n\u001b[1;32m      2\u001b[0m resource \u001b[38;5;241m=\u001b[39m ConfigResource(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtopic\u001b[39m\u001b[38;5;124m'\u001b[39m, topic)\n\u001b[1;32m      3\u001b[0m result_dict \u001b[38;5;241m=\u001b[39m admin\u001b[38;5;241m.\u001b[39mdescribe_configs([resource])\n\u001b[0;32m----> 4\u001b[0m config_entries \u001b[38;5;241m=\u001b[39m \u001b[43mresult_dict\u001b[49m\u001b[43m[\u001b[49m\u001b[43mresource\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mresult\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m max_size \u001b[38;5;241m=\u001b[39m config_entries[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmax.message.bytes\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m max_size\u001b[38;5;241m.\u001b[39mvalue\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/retail_ITSM_env/lib/python3.11/concurrent/futures/_base.py:456\u001b[0m, in \u001b[0;36mFuture.result\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    454\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m CancelledError()\n\u001b[1;32m    455\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_state \u001b[38;5;241m==\u001b[39m FINISHED:\n\u001b[0;32m--> 456\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__get_result\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    457\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    458\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTimeoutError\u001b[39;00m()\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/retail_ITSM_env/lib/python3.11/concurrent/futures/_base.py:401\u001b[0m, in \u001b[0;36mFuture.__get_result\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    399\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_exception:\n\u001b[1;32m    400\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 401\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_exception\n\u001b[1;32m    402\u001b[0m     \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    403\u001b[0m         \u001b[38;5;66;03m# Break a reference cycle with the exception in self._exception\u001b[39;00m\n\u001b[1;32m    404\u001b[0m         \u001b[38;5;28mself\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "\u001b[0;31mKafkaException\u001b[0m: KafkaError{code=UNKNOWN_TOPIC_OR_PART,val=3,str=\"Broker: Unknown topic or partition\"}"
      ]
     }
    ],
